--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tangro/tangro-github-toolkit",
-  "version": "0.6.1",
+  "version": "1.0.0",
   "description": "A helper and wrapper around @actions/github",
   "main": "lib/index.js",
   "scripts": {
@@ -22,12 +22,13 @@
   },
   "homepage": "https://github.com/tangro/tangro-github-toolkit#readme",
   "dependencies": {
-    "@actions/github": "^1.0.0"
+    "@actions/core": "1.2.3",
+    "@actions/github": "^2.1.1"
   },
   "devDependencies": {
-    "@types/node": "^12.7.3",
+    "@types/node": "^13.7.7",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.0",
-    "typescript": "^3.6.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^3.8.3"
   }
 }
