--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tangro/tangro-github-toolkit",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A helper and wrapper around @actions/github",
   "main": "lib/index.js",
   "scripts": {
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/tangro/tangro-github-toolkit#readme",
   "dependencies": {
-    "@actions/core": "1.2.3",
-    "@actions/github": "2.2.0"
+    "@actions/core": "1.2.4",
+    "@actions/github": "4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.13",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "typescript": "^3.9.5"
+    "@types/node": "14.0.18",
+    "npm-run-all": "4.1.5",
+    "rimraf": "3.0.2",
+    "typescript": "3.9.6"
   }
 }
